--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,30 @@
 {
-    "name": "",
-    "short_name": "",
+    "name": "Lab8_Starter",
+    "short_name": "Kate",
     "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
+    "start_url": "./index.html",
+    "display": "minimal-ui",
+    "background_color": "#cbc3e3",
+    "theme_color": "#f9f1fe",
     "icons": [
       {
         "src": "/assets/images/icons/icon-192x192.png",
         "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-512x512.png",
+        "sizes": "512x512",
         "type": "image/png"
       }
     ]
